--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -6,7 +6,10 @@
     <div class="row">
       <div class="col-md-12">
         <h2>注文情報確認</h2>
-
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-7">
         <table  class="table table-hover table-inverse">
           <thead>
             <th>商品名</th>
@@ -15,12 +18,58 @@
             <th>小計</th>
           </thead>
           <tbody>
-            <tr>
-              <td></td>
-            </tr>
+            <% @cart_items.each do |cart_item| %>
+              <tr>
+                <td><%= image_tag cart_item.item.image, size: "100x100" %>　<%= cart_item.item.name %></td>
+                <td><%= cart_item.item.with_tax_price.round.to_s(:delimited) %></td>
+                <td><%= cart_item.amount %></td>
+                <td><%= cart_item.subtotal.round.to_s(:delimited) %></td>
+                <% @total += cart_item.subtotal %>
+              </tr>
+            <% end %>
           </tbody>
         </table>
       </div>
+      <div class="col-md-4 offset-md-1">
+        <table  class="table table-hover table-inverse">
+          <tr>
+            <th>送料</th>
+            <% @order.shipping_cost = 800 %>
+            <td><%= @order.shipping_cost %></td>
+          </tr>
+          <tr>
+            <th>商品合計</th>
+            <td><%= @total.round.to_s(:delimited) %></td>
+          </tr>
+          <tr>
+            <th>請求金額</th>
+            <% @order.total_payment = @order.shipping_cost + @total %>
+            <td><%= @order.total_payment.round.to_s(:delimited) %></td>
+          </tr>
+        </table>
+      </div>
     </div>
+
+    <div class="row">
+      <div class="col-md-12">
+        <table>
+          <tr>
+            <th>支払方法</th>
+            <td><%= @order.payment_method_i18n %></td>
+          </tr>
+          <tr>
+            <th>お届け先</th>
+            <td>〒<%= @order.postal_code %>&nbsp&nbsp<%= @order.address %><br>
+              <%= @order.name %>
+            </td>
+          </tr>
+        </table>
+
+        <div style="text-align:center">
+          <%= link_to '注文を確定する', orders_complete_path, class: "btn btn-sm btn-success" %>
+        </div>
+      </div>
+    </div>
+
   </div>
 </div>
