--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -1,5 +1,6 @@
 <!--<h1>Public::Orders#confirm</h1>-->
 <!--<p>Find me in app/views/public/orders/confirm.html.erb</p>-->
+<%#= render 'public/shared/error_messages', resource: @order %>
 
 <div class="container px-5 px-sm-0">
   <div class="container">
@@ -65,9 +66,18 @@
           </tr>
         </table>
 
-        <div style="text-align:center">
-          <%= link_to '注文を確定する', orders_complete_path, class: "btn btn-sm btn-success" %>
-        </div>
+        <%= form_with model: @order, url: orders_path, method: :post, local: true do |f| %>
+          <div style="text-align:center">
+            <%= f.submit '注文を確定する', class: "btn btn-sm btn-success" %>
+            <%= f.hidden_field :customer_id, value: current_customer.id %>
+            <%= f.hidden_field :postal_code, value: @order.postal_code %>
+            <%= f.hidden_field :address, value: @order.address %>
+            <%= f.hidden_field :name, value: @order.name %>
+            <%= f.hidden_field :shipping_cost, value: @order.shipping_cost %>
+            <%= f.hidden_field :total_payment, value: @order.total_payment %>
+            <%= f.hidden_field :payment_method, value: @order.payment_method %>
+          </div>
+        <% end %>
       </div>
     </div>
 
