--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -24,13 +24,16 @@
                 <!--配送先-->
                 <td><%= order.address %></td>
                 <!--注文商品-->
-                <td><%= order.name %></td>
+                <td><% order.order_details.each do|order_detail| %>
+                  <%= order_detail.item.name %><br>
+                  <% end %>
+                </td>
                 <!--支払金額-->
                 <td><%= order.total_payment %></td>
                 <!--ステータス-->
                 <td><%= order.status %></td>
                 <!--注文詳細-->
-                <td><%= link_to '表示する', admin_order_path(order.id), class: "btn btn-sm btn-primary" %></td>
+                <td><%= link_to '表示する', order_path(order.id), class: "btn btn-sm btn-primary" %></td>
               </tr>
             <% end %>
           </tbody>
