--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -1,3 +1,81 @@
-<h1>Public::Orders#show</h1>
-<p>Find me in app/views/public/orders/show.html.erb</p>
+<!--<h1>Public::Orders#show</h1>-->
+<!--<p>Find me in app/views/public/orders/show.html.erb</p>-->
 
+<div class="container px-5 px-sm-0">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <h2>注文履歴詳細</h2>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6">
+        <h4>注文情報</h4>
+        <table  class="table table-hover table-inverse">
+          <tr>
+            <th>注文日</th>
+            <td><%= @order.updated_at %></td>
+          </tr>
+          <tr>
+            <th>配送先</th>
+            <td>
+              〒<%= @order.postal_code %><br>
+              <%= @order.address %><br>
+              <%= @order.name %>
+            </td>
+          </tr>
+          <tr>
+            <th>支払方法</th>
+            <td><%= @order.payment_method_i18n %></td>
+          </tr>
+          <tr>
+            <th>ステータス</th>
+            <td><%= @order.status_i18n %></td>
+          </tr>
+        </table>
+      </div>
+      <div class="col-md-5 offset-md-1">
+        <h4>請求情報</h4>
+        <table  class="table table-hover table-inverse">
+          <tr>
+            <th>商品合計</th>
+            <% @total = 0 %>
+              <td><% @order.order_details.each do|order_detail| %>
+                <% @total += order_detail.item.with_tax_price * order_detail.amount %>
+                <% end %>
+                <%= @total.round.to_s(:delimited) %>
+              </td>
+            <%#= @order_detail.price.round.to_s(:delimited) %>
+          </tr>
+          <tr>
+            <th>配送料</th>
+            <td><%= @order.shipping_cost %></td>
+          </tr>
+          <tr>
+            <th><b>ご請求額</b></th>
+            <td></td>
+          </tr>
+        </table>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        <h4>注文内容</h4>
+        <table  class="table table-hover table-inverse">
+          <thead>
+            <th>商品</th>
+            <th>単価（税込）</th>
+            <th>個数</th>
+            <th>小計</th>
+          </thead>
+          <tbody>
+            <tr>
+              <td></td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+
+  </div>
+</div>
