--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -29,9 +29,9 @@
                   <% end %>
                 </td>
                 <!--支払金額-->
-                <td><%= order.total_payment %></td>
+                <td><%= order.total_payment.round.to_s(:delimited) %></td>
                 <!--ステータス-->
-                <td><%= order.status %></td>
+                <td><%= order.status_i18n %></td>
                 <!--注文詳細-->
                 <td><%= link_to '表示する', order_path(order.id), class: "btn btn-sm btn-primary" %></td>
               </tr>
