--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -40,12 +40,12 @@
           <tr>
             <th>商品合計</th>
             <% @total = 0 %>
-              <td><% @order.order_details.each do|order_detail| %>
+            <td>
+              <% @order.order_details.each do|order_detail| %>
                 <% @total += order_detail.item.with_tax_price * order_detail.amount %>
-                <% end %>
-                <%= @total.round.to_s(:delimited) %>
-              </td>
-            <%#= @order_detail.price.round.to_s(:delimited) %>
+              <% end %>
+              <%= @total.round.to_s(:delimited) %>
+            </td>
           </tr>
           <tr>
             <th>配送料</th>
@@ -53,7 +53,7 @@
           </tr>
           <tr>
             <th><b>ご請求額</b></th>
-            <td></td>
+            <td><%= @order.total_payment.round.to_s(:delimited) %></td>
           </tr>
         </table>
       </div>
@@ -69,9 +69,15 @@
             <th>小計</th>
           </thead>
           <tbody>
-            <tr>
-              <td></td>
-            </tr>
+            <% @total = 0 %>
+            <% @order.order_details.each do |order_detail| %>
+              <tr>
+                <td><%= order_detail.item.name %></td>
+                <td><%= order_detail.item.with_tax_price.round.to_s(:delimited) %></td>
+                <td><%= order_detail.amount %></td>
+                <td><%= order_detail.subtotal.round.to_s(:delimited) %></td>
+              </tr>
+            <% end %>
           </tbody>
         </table>
       </div>
